rewrite in Swift
old one worked fine, but seemed to only work on Yosemite because of some weird AppleScript thingy. Rewrote it in Swift to be more portable, faster, and more readable.

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "node test.js"
+    "test": "node test.js",
+    "compile": "swiftc main.swift -emit-executable -sdk $(xcrun --show-sdk-path --sdk macosx)"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "main"
   ],
   "keywords": [
     "osx",
@@ -25,9 +27,6 @@
     "application",
     "path"
   ],
-  "dependencies": {
-    "run-applescript": "^1.0.1"
-  },
   "devDependencies": {
     "ava": "0.0.4"
   }
