--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
-sudo: false
 language: objective-c
-install: brew install node
+install:
+  - brew install n
+  - n latest
 script:
   - npm install
   - npm test
