--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: objective-c
 install:
+  - brew update
   - brew install n
-  - n latest
+  - n lts
 script:
   - npm install
   - npm test
