improve travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
-language: objective-c
-install:
-  - brew update
-  - brew install n
-  - n lts
-script:
-  - npm install
-  - npm test
+os: osx
+language: node_js
+node_js:
+  - '5'
+  - '4'
