--- a/package.json
+++ b/package.json
@@ -1,45 +1,40 @@
 {
-  "name": "app-path",
-  "version": "2.2.0",
-  "description": "Get the path to an app (macOS)",
-  "license": "MIT",
-  "repository": "sindresorhus/app-path",
-  "author": {
-    "name": "Sindre Sorhus",
-    "email": "sindresorhus@gmail.com",
-    "url": "sindresorhus.com"
-  },
-  "engines": {
-    "node": ">=4"
-  },
-  "scripts": {
-    "test": "xo && ava",
-    "compile": "clang main.m -fmodules -mmacosx-version-min=10.6 -o main"
-  },
-  "files": [
-    "index.js",
-    "main"
-  ],
-  "keywords": [
-    "macos",
-    "osx",
-    "applescript",
-    "app",
-    "application",
-    "path",
-    "dir",
-    "directory",
-    "bundle",
-    "location"
-  ],
-  "dependencies": {
-    "execa": "^0.4.0"
-  },
-  "devDependencies": {
-    "ava": "*",
-    "xo": "*"
-  },
-  "xo": {
-    "esnext": true
-  }
+	"name": "app-path",
+	"version": "2.2.0",
+	"description": "Get the path to an app (macOS)",
+	"license": "MIT",
+	"repository": "sindresorhus/app-path",
+	"author": {
+		"name": "Sindre Sorhus",
+		"email": "sindresorhus@gmail.com",
+		"url": "sindresorhus.com"
+	},
+	"engines": {
+		"node": ">=8"
+	},
+	"scripts": {
+		"test": "xo && ava",
+		"compile": "clang main.m -fmodules -mmacosx-version-min=10.6 -o main"
+	},
+	"files": [
+		"index.js",
+		"main"
+	],
+	"keywords": [
+		"macos",
+		"applescript",
+		"app",
+		"application",
+		"path",
+		"directory",
+		"bundle",
+		"location"
+	],
+	"dependencies": {
+		"execa": "^1.0.0"
+	},
+	"devDependencies": {
+		"ava": "^0.25.0",
+		"xo": "^0.23.0"
+	}
 }
