--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
 		"node": ">=8"
 	},
 	"scripts": {
-		"test": "xo && ava",
+		"test": "xo && ava && tsd-check",
 		"compile": "clang main.m -fmodules -mmacosx-version-min=10.6 -o main"
 	},
 	"files": [
 		"index.js",
+		"index.d.ts",
 		"main"
 	],
 	"keywords": [
@@ -34,7 +35,8 @@
 		"execa": "^1.0.0"
 	},
 	"devDependencies": {
-		"ava": "^0.25.0",
-		"xo": "^0.23.0"
+		"ava": "^1.3.1",
+		"tsd-check": "^0.5.0",
+		"xo": "^0.24.0"
 	}
 }
