--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"node": ">=8"
 	},
 	"scripts": {
-		"test": "xo && ava && tsd-check",
+		"test": "xo && ava && tsd",
 		"compile": "clang main.m -fmodules -mmacosx-version-min=10.6 -o main"
 	},
 	"files": [
@@ -35,8 +35,8 @@
 		"execa": "^1.0.0"
 	},
 	"devDependencies": {
-		"ava": "^1.3.1",
-		"tsd-check": "^0.6.0",
+		"ava": "^1.4.1",
+		"tsd": "^0.7.1",
 		"xo": "^0.24.0"
 	}
 }
